--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,12 @@
 spring.application.name=ToDoList
-# H2 Database Configuration
+##configuration data base
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=password
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.h2.console.enabled=true
-springdoc.api-docs.enabled=true
 
+## configuration api doc
+springdoc.api-docs.enabled=true
 springdoc.swagger-ui.enabled=true
